build/log/idf_py_stderr_output_16292
/home/noctis/Progra/ci_comunication/main/ci_comunication.c: In function 'init_wifi':
/home/noctis/Progra/ci_comunication/main/ci_comunication.c:25:23: error: 'WIFI_INIT_CONFIG_DEFAULT' undeclared (first use in this function)
   25 |         wifi_config = WIFI_INIT_CONFIG_DEFAULT;
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~
/home/noctis/Progra/ci_comunication/main/ci_comunication.c:25:23: note: each undeclared identifier is reported only once for each function it appears in
/home/noctis/Progra/ci_comunication/main/ci_comunication.c: In function 'init_now':
/home/noctis/Progra/ci_comunication/main/ci_comunication.c:48:1: error: expected ';' before '}' token
   48 | };
      | ^
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/ci_comunication.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
